# cpp-modern-development-course

./: CMakeLists.txt
01-cpp-white/: CMakeLists.txt
01-cpp-white/01-a-plus-b/: CMakeLists.txt
01-cpp-white/02-minimal-string/: CMakeLists.txt  main.cpp
01-cpp-white/03-equation/: CMakeLists.txt  main.cpp
01-cpp-white/04-division/: CMakeLists.txt  main.cpp
01-cpp-white/05-goods-price/: CMakeLists.txt  main.cpp
01-cpp-white/06-even-numbers/: CMakeLists.txt  main.cpp
01-cpp-white/07-second-search/: CMakeLists.txt  main.cpp
01-cpp-white/08-gcd/: CMakeLists.txt  main.cpp
01-cpp-white/09-binary/: CMakeLists.txt  main.cpp
01-cpp-white/10-factorial/: CMakeLists.txt  main.cpp
01-cpp-white/11-is-palindrome/: CMakeLists.txt  main.cpp
01-cpp-white/12-palindrome-filter/: CMakeLists.txt  main.cpp
01-cpp-white/13-update-if-greater/: CMakeLists.txt  main.cpp
01-cpp-white/14-move-strings/: CMakeLists.txt  main.cpp
01-cpp-white/15-reverse/: CMakeLists.txt  main.cpp
01-cpp-white/16-reversed/: CMakeLists.txt  main.cpp
01-cpp-white/17-temperature/: CMakeLists.txt  main.cpp
01-cpp-white/17-temperature-v1/: CMakeLists.txt  main.cpp
01-cpp-white/18-line/: CMakeLists.txt  main.cpp
01-cpp-white/19-month-tasks/: CMakeLists.txt  main.cpp
01-cpp-white/20-anagrams/: CMakeLists.txt  main.cpp
01-cpp-white/21-capitals/: CMakeLists.txt  main.cpp
01-cpp-white/22-bus-stops-v1/: CMakeLists.txt  main.cpp
01-cpp-white/23-bus-stops-v2/: CMakeLists.txt  main.cpp
01-cpp-white/24-unique-strings/: CMakeLists.txt  main.cpp
01-cpp-white/25-map-values-set/: CMakeLists.txt  main.cpp
01-cpp-white/26-synonyms/: CMakeLists.txt  main.cpp
01-cpp-white/27-bus-stops-v3/: CMakeLists.txt  main.cpp
01-cpp-white/28-sort-modulo/: CMakeLists.txt  main.cpp
01-cpp-white/29-sort-ignoring-case/: CMakeLists.txt  main.cpp
01-cpp-white/30-sorted-strings/: CMakeLists.txt  main.cpp
01-cpp-white/31-name-history-v1/: CMakeLists.txt  main.cpp
01-cpp-white/32-name-history-v2/: CMakeLists.txt  main.cpp
01-cpp-white/33-reversible-string/: CMakeLists.txt  main.cpp
01-cpp-white/34-name-history-v3/: CMakeLists.txt  main.cpp
01-cpp-white/35-initialization/: CMakeLists.txt  main.cpp
01-cpp-white/36-lecture-title/: CMakeLists.txt  main.cpp
01-cpp-white/37-reversible-function-v1/: CMakeLists.txt  main.cpp
01-cpp-white/38-reversible-function-v2/: CMakeLists.txt  main.cpp
01-cpp-white/39-input-output-v1/: CMakeLists.txt  main.cpp
01-cpp-white/40-input-output-v2/: CMakeLists.txt  main.cpp
01-cpp-white/41-precision/: CMakeLists.txt  main.cpp
01-cpp-white/42-table-input/: CMakeLists.txt  main.cpp
01-cpp-white/43-students-list/: CMakeLists.txt  main.cpp
01-cpp-white/44-rational-v1/: CMakeLists.txt  main.cpp
01-cpp-white/45-rational-v2/: CMakeLists.txt  main.cpp
01-cpp-white/46-rational-v3/: CMakeLists.txt  main.cpp
01-cpp-white/47-rational-v4/: CMakeLists.txt  main.cpp
01-cpp-white/48-rational-v5/: CMakeLists.txt  main.cpp
01-cpp-white/49-ensure-equal/: CMakeLists.txt  main.cpp
01-cpp-white/50-rational-v6/: CMakeLists.txt  main.cpp
01-cpp-white/51-rational-v7/: CMakeLists.txt  main.cpp
01-cpp-white/52-time-server/: CMakeLists.txt  main.cpp
01-cpp-white/53-cpp-white-final/: CMakeLists.txt  main.cpp
02-cpp-yellow/: CMakeLists.txt
02-cpp-yellow/01-matrix/: CMakeLists.txt  main.cpp
02-cpp-yellow/01-matrix-sum/: main.cpp
02-cpp-yellow/02-average-temperature/: CMakeLists.txt  main.cpp
02-cpp-yellow/02-temperature-v2/: CMakeLists.txt  main.cpp
02-cpp-yellow/03-block-weight/: CMakeLists.txt  main.cpp
02-cpp-yellow/04-region-database/: CMakeLists.txt  main.cpp
02-cpp-yellow/05-team-tasks/: CMakeLists.txt  main.cpp
02-cpp-yellow/06-square/: CMakeLists.txt  main.cpp
02-cpp-yellow/07-element-reference/: CMakeLists.txt  main.cpp
02-cpp-yellow/08-bus-stops-decomposition/: CMakeLists.txt  main.cpp
02-cpp-yellow/08-bus-stops-decomposition-v1/: CMakeLists.txt
02-cpp-yellow/09-test-equation/: CMakeLists.txt  main.cpp
02-cpp-yellow/10-test-person/: CMakeLists.txt  main.cpp
02-cpp-yellow/11-test-rational/: CMakeLists.txt  main.cpp
02-cpp-yellow/12-test-palindrome/: CMakeLists.txt  main.cpp
02-cpp-yellow/13-print-vector-part/: main.cpp
02-cpp-yellow/13-sum-reverse-sort/: CMakeLists.txt  sum_reverse_sort.cpp
02-cpp-yellow/14-find-greater-elements/: main.cpp
02-cpp-yellow/14-phone-number/: CMakeLists.txt  phone_number.cpp
02-cpp-yellow/15-rectangle-definition/: CMakeLists.txt  rectangle.h
02-cpp-yellow/15-split-into-words/: CMakeLists.txt  main.cpp
02-cpp-yellow/16-bus-stops-decomposition-v2/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
02-cpp-yellow/17-print-vector-part/: CMakeLists.txt  main.cpp
02-cpp-yellow/18-find-greater-elements/: CMakeLists.txt  main.cpp
02-cpp-yellow/19-split-into-words/: CMakeLists.txt  main.cpp
02-cpp-yellow/20-remove-duplicates/: CMakeLists.txt  main.cpp
02-cpp-yellow/21-permutations/: CMakeLists.txt  main.cpp
02-cpp-yellow/22-print-stats/: CMakeLists.txt  main.cpp
02-cpp-yellow/23-merge-sort-v1/: CMakeLists.txt  main.cpp
02-cpp-yellow/24-merge-sort-v2/: CMakeLists.txt  main.cpp
02-cpp-yellow/25-find-nearest-element/: CMakeLists.txt  main.cpp
02-cpp-yellow/26-name-history-v4/: CMakeLists.txt  main.cpp
02-cpp-yellow/27-find-starts-with-v1/: CMakeLists.txt  main.cpp
02-cpp-yellow/28-find-starts-with-v2/: CMakeLists.txt  main.cpp
02-cpp-yellow/29-build-expression-v1/: CMakeLists.txt  main.cpp
02-cpp-yellow/30-build-expression-v2/: CMakeLists.txt  main.cpp
02-cpp-yellow/31-inheritance/: CMakeLists.txt  main.cpp
02-cpp-yellow/32-notifiers/: CMakeLists.txt  main.cpp
02-cpp-yellow/33-figures/: CMakeLists.txt  main.cpp
02-cpp-yellow/34-refactoring/: CMakeLists.txt  main_v2.cpp
02-cpp-yellow/35-cpp-yellow-final/: CMakeLists.txt  condition_parser.cpp  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.h  token.cpp  token.h
03-cpp-red/: profile.h  (+2 more)
(+205 files in other folders)
