cmake_minimum_required(VERSION 3.0.0)

add_subdirectory("01-a-plus-b")
add_subdirectory("02-minimal-string")
add_subdirectory("03-equation")
add_subdirectory("04-division")
add_subdirectory("05-goods-price")
add_subdirectory("06-even-numbers")
add_subdirectory("07-second-search")
add_subdirectory("08-gcd")
