cmake_minimum_required(VERSION 3.0.0)

add_subdirectory("01-matrix-sum")
add_subdirectory("02-average-temperature")
add_subdirectory("03-block-weight")
add_subdirectory("04-region-database")
add_subdirectory("05-team-tasks")
add_subdirectory("06-square")
add_subdirectory("07-element-reference")
# add_subdirectory("08-decomposition")
add_subdirectory("09-test-equation")
# add_subdirectory("10-test-person")
# add_subdirectory("11-test-rational")
# add_subdirectory("12-test-palindrome")
add_subdirectory("13-print-vector-part")
add_subdirectory("14-find-greater-elements")
add_subdirectory("15-split-into-words")